Fix javadoc creation