@@ -336,6 +336,7 @@
             </activation>
             <properties>
                 <surefire.jvmargs>--add-exports java.base/sun.nio.ch=ALL-UNNAMED</surefire.jvmargs>
+                <javadoc.args>--add-exports java.base/sun.nio.ch=ALL-UNNAMED</javadoc.args>
             </properties>
         </profile>
 
